tests/invalid/undef_inst.err_exp
undef_inst.m:001: Warning: interface for module `undef_inst' does not export
undef_inst.m:001:   anything.
undef_inst.m:008: In mode declaration for predicate `undef_inst.x'/1:
undef_inst.m:008:   error: undefined inst `bar'/0.
undef_inst.m:008: In mode declaration for predicate `undef_inst.x'/1:
undef_inst.m:008:   error: undefined inst `foo'/0.
For more information, recompile with `-E'.
